fix: Horizontal overflow on small screens when scrollbar appears

--- a/styles/nysl.css
+++ b/styles/nysl.css
@@ -27,7 +27,7 @@ body {
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   height: -moz-available; /* WebKit-based browsers will ignore this. */
   height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
